# reed-solomon

./: CMakeLists.txt  README.md
.github/workflows/: android-ndk.yml  linux.yml  windows.yml
benchs/: CMakeLists.txt  main.cpp
include/: reed-solomon.h
src/: reed-solomon.cpp
src/rslib/: rslib.c  rslib.h
tests/: CMakeLists.txt  main.cpp
